# ai_course_platform

./: .env.example  .gitignore  Dockerfile  PRD.md  PRD0-用户系统.md  README.md  docker-compose.yml
backend/: README.md  pyproject.toml  requirements.txt
backend/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/frontend_build/: asset-manifest.json  index.html  manifest.json
backend/frontend_build/static/js/: main.2df19d64.js  main.2df19d64.js.LICENSE.txt
docs/: README.md
docs/guidelines/: API.md  DEPENDENCIES.md  DEPLOY.md  DESIGN_TOKEN.md  ICON.md
frontend/: .env.development  package-lock.json  package.json  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  App.vue
frontend/src/api/: auth.ts  client.ts
frontend/src/components/: PrivateRoute.tsx
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: AboutPage.tsx  ContactPage.tsx  CoursesPage.tsx  DashboardPage.tsx  PrivacyPage.tsx
frontend/src/pages/auth/: AuthPages.css  LoginPage.tsx  RegisterPage.tsx
frontend/src/pages/user/: ChangePasswordPage.tsx  ProfileEditPage.tsx  ProfilePage.tsx
frontend/src/router/: index.ts
frontend/src/store/: useThemeStore.ts  useUserStore.ts
frontend/src/stores/: user.ts
frontend/src/utils/: request.ts  types.ts
frontend/src/views/: AboutView.vue  HomeView.vue
frontend/src/views/auth/: LoginView.vue  RegisterView.vue
frontend/src/views/user/: ChangePasswordView.vue  (+2 more)
supabase/: config.toml
