[project]
name = "ai-course-platform-backend"
version = "0.1.0"
description = "AI Course Platform Backend API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "django==5.1.4",
    "djangorestframework==3.15.2",
    "psycopg2-binary==2.9.10",
    "django-cors-headers==4.6.0",
    "python-dotenv==1.0.1",
    "djangorestframework-simplejwt==5.4.0",
    "drf-spectacular==0.27.2",
    "django-extensions==3.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
